--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,12 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-toastr": "^3.0.0",
     "reactstrap": "^8.1.1",
     "redux": "^4.0.4",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "toastr": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
